--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#/about">About</a></li>
+        <li><a href="#/faqs">FAQs</a></li>
         <li><a href="#/community">Community</a></li>
         <li><a href="#/kampmeeting">Kampmeeting</a></li>
         <li><a href="#/events">Events</a></li>
