--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <li><a href="#/faqs">FAQs</a></li>
         <li><a href="#/community">Community</a></li>
         <li><a href="#/kampmeeting">Kampmeeting</a></li>
+
+        <li><a href="#/elections">Elections</a></li>
         <li><a href="#/events">Events</a></li>
         <li><a href="#/resources">Resources</a></li> 
         <li><a href="#/getinvolved">Get Involved</a></li> 
