Added New Content

--- a/index.html
+++ b/index.html
@@ -29,11 +29,25 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#/about">About</a></li>
-        <li><a href="#/faqs">FAQs</a></li>
-        <li><a href="#/community">Community</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" >About
+          <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#/about">About Kinship</a></li>
+            <li><a href="#/faqs">Frequently Asked Questions</a></li>
+            <li><a href="#/">Page 1-3</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" >Community
+          <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#/community">Community Members</a></li>
+            <li><a href="#/levels">Membership Levels</a></li>
+            <li><a href="#/welcome">Welcome Members</a></li>
+          </ul>
+        </li>
         <li><a href="#/kampmeeting">Kampmeeting</a></li>
-
         <li><a href="#/elections">Elections</a></li>
         <li><a href="#/events">Events</a></li>
         <li><a href="#/resources">Resources</a></li> 
