--- a/index.html
+++ b/index.html
@@ -47,9 +47,15 @@
             <li><a href="#/welcome">Welcome Members</a></li>
           </ul>
         </li>
-        <li><a href="#/kampmeeting">Kampmeeting</a></li>
+         <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" >Events
+          <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#/kampmeeting">Kampmeeting</a></li>
+            <li><a href="#/km2016">2016 Kampmeeting</a></li>
+          </ul>
+        </li>
         <li><a href="#/elections">Elections</a></li>
-        <li><a href="#/events">Events</a></li>
         <li><a href="#/resources">Resources</a></li> 
         <li><a href="#/getinvolved">Get Involved</a></li> 
                
