--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#/home">SDA Kinship</a>
+      <a class="navbar-brand" href="#/">SDA Kinship</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
@@ -35,7 +35,8 @@
           <ul class="dropdown-menu">
             <li><a href="#/about">About Kinship</a></li>
             <li><a href="#/faqs">Frequently Asked Questions</a></li>
-            <li><a href="#/">Page 1-3</a></li>
+            <li><a href="#/history">Our History</a></li>
+            <li><a href="#/whyjoin">Why Join Kinship?</a></li>
           </ul>
         </li>
         <li class="dropdown">
@@ -64,7 +65,9 @@
   </div>
 </nav>
 
-<div ng-view class="container" style="margin-top: 50px"></div>
+<div ng-view class="container" style="margin: 50px 0px 0px 0px">
+
+</div>
 
 
 <script src="kinship.js" ></script>
